공연(Show) 추가 기능 구현 및 수정 (#68)
* 2023-12-15, Chairì예외처리 추가, 예외처리빼먹음

* 2023-12-15, , pull땡기기전 커밋

* 2023-12-15, , stagestatus 삭제, develop pull을 위한 커밋

* 2023-12-18,, 페이징처리+ongoing최신순으로 수정, 수정후 테스트 코드 작성

* 2023-12-18, 추8, 추가 기능 구현, 테스트 완료

* 2023-12-19, 추가기능 구현 및 수정, 연관관계 삭제 완료

* 2023-12-19, method수정