@@ -2,18 +2,21 @@ package com.example.thicketstage.service;
 
 import com.example.thicketstage.domain.Stage;
 import com.example.thicketstage.dto.request.RequestCreateStageDto;
-import com.example.thicketstage.dto.request.RequestSetNewStatusDto;
 import com.example.thicketstage.dto.request.RequestUpdateInfoDto;
 import com.example.thicketstage.dto.response.ResponseStageDto;
 import com.example.thicketstage.dto.response.ResponseStageThumbnailDto;
-import com.example.thicketstage.enumerate.StageStatus;
 import com.example.thicketstage.enumerate.StageType;
 import com.example.thicketstage.repository.StageRepository;
+import com.example.thicketstage.repository.StageStartRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
@@ -24,6 +27,7 @@ import java.util.stream.Collectors;
 public class StageServiceImpl implements StageService{
 
     private final StageRepository stageRepository;
+    private final StageStartRepository stageStartRepository;
     
     @Override
     public RequestCreateStageDto createStage(RequestCreateStageDto stageDto) {
@@ -45,18 +49,24 @@ public class StageServiceImpl implements StageService{
         return dtos;
     }
 
-    // STATUS.ONGOING 인 공연 모두 최신 순으로 - 작성중
-//    @Override
-//    public Page<ResponseStageThumbnailDto> getOngoingList(StageStatus stageStatus,
-//                                                          Pageable pageable) {
-//        Page<Stage> stages
-//                = stageRepository.findByStageStatusOrderByCreateAtDesc(StageStatus.ONGOING,
-//                                                                        pageable);
-//        if(stages.isEmpty()){
-//            throw new EntityNotFoundException("해당 공연이 존재하지 않습니다");
-//        }
-//        return stages.map(ResponseStageThumbnailDto::new);
-//    }
+    // 진행 중인 공연 모두 최신 순으로
+    @Override
+    public Page<ResponseStageThumbnailDto> getOngoingList(Pageable pageable){
+        LocalDateTime now = LocalDateTime.now();
+
+        List<Stage> allStages = stageRepository.findAll();
+        List<Stage> ongoingStages = allStages.stream()
+                .filter(stage -> stage.getStageOpen().isBefore(now)
+                                    && stage.getStageClose().isAfter(now))
+                .collect(Collectors.toList());
+
+        if (ongoingStages.isEmpty()) {
+            throw new EntityNotFoundException("현재 진행 중인 공연이 없습니다.");
+        }
+
+        return new PageImpl<>(ongoingStages, pageable, ongoingStages.size())
+                                        .map(ResponseStageThumbnailDto::new);
+    }
 
     // 공연 하나 선택 했을 때 상세 페이지 조회 되게
     @Override
@@ -71,39 +81,65 @@ public class StageServiceImpl implements StageService{
         return new ResponseStageDto(stage);
     }
 
-    // StageType 별로 줄 세우기
+    // StageType 별로 줄 세우기 - 진행 중인 공연 최신 등록 순으로 정렬
     @Override
-    public List<ResponseStageThumbnailDto> getStageTypeList(StageType stageType) {
-        List<Stage> stages = stageRepository.findByStageType(stageType);
+    public Page<ResponseStageThumbnailDto> getStageTypeList(StageType stageType,
+                                                            Pageable pageable) {
+        LocalDateTime now = LocalDateTime.now();
 
-        if(stages.isEmpty()){
-            throw new EntityNotFoundException("해당 공연이 존재하지 않습니다");
+        List<Stage> stages = stageRepository.findByStageType(stageType);
+        List<Stage> ongoingStages = stages.stream()
+                .filter(stage -> stage.getStageOpen().isBefore(now)
+                                    && stage.getStageClose().isAfter(now))
+                .toList();
+
+        if(ongoingStages.isEmpty()){
+            throw new EntityNotFoundException("현재 진행 중인 공연이 없습니다.");
         }
 
-        return stages.stream().map(ResponseStageThumbnailDto::new)
-                                .collect(Collectors.toList());
+        return new PageImpl<>(ongoingStages, pageable, ongoingStages.size())
+                                        .map(ResponseStageThumbnailDto::new);
     }
 
-    // stageStatus 별로 줄 세우기
+    // ticketOpen시간 비교해서 이전인것만 - 커밍순 main /shows/before
     @Override
-    public List<ResponseStageThumbnailDto> getStageStatusList(StageStatus stageStatus){
-        List<Stage> stages = stageRepository.findByStageStatus(stageStatus);
+    public Page<ResponseStageThumbnailDto> getComingSoonList(Pageable pageable){
+        LocalDateTime now = LocalDateTime.now();
 
-        if(stages.isEmpty()){
-            throw new EntityNotFoundException("해당 공연이 존재하지 않습니다");
+        List<Stage> allStages = stageRepository.findAll();
+        List<Stage> comingSoonStages = allStages.stream()
+                .filter(stage -> stage.getTicketOpen().isAfter(now))
+                .toList();
+
+        if (comingSoonStages.isEmpty()) {
+            throw new EntityNotFoundException("현재 진행 중인 공연이 없습니다.");
         }
 
-        return stages.stream().map(ResponseStageThumbnailDto::new)
-                                .collect(Collectors.toList());
+        return new PageImpl<>(comingSoonStages, pageable, comingSoonStages.size())
+                                             .map(ResponseStageThumbnailDto::new);
+    }
+
+    // stageClose보다 이후 - 관리자 page -> /shows/ended
+    @Override
+    public Page<ResponseStageThumbnailDto> getEndedList(Pageable pageable){
+        LocalDateTime now = LocalDateTime.now();
+
+        List<Stage> allStages = stageRepository.findAll();
+        List<Stage> endedStages = allStages.stream()
+                .filter(stage -> stage.getStageClose().isBefore(now))
+                .toList();
+
+        if (endedStages.isEmpty()) {
+            throw new EntityNotFoundException("종료된 공연이 없습니다.");
+        }
+
+        return new PageImpl<>(endedStages, pageable, endedStages.size())
+                                    .map(ResponseStageThumbnailDto::new);
     }
 
     @Override
     public List<ResponseStageThumbnailDto> searchStage(String keyword) {
         List<Stage> searchResults = stageRepository.searchByNameOrPlace("%"+keyword+"%");
-
-        if(searchResults.isEmpty()){
-            throw new EntityNotFoundException("해당 검색어의 검색 결과가 없습니다.");
-        }
 
         ArrayList<ResponseStageThumbnailDto> stageInfoList = new ArrayList<>();
 
@@ -125,20 +161,7 @@ public class StageServiceImpl implements StageService{
     }
 
     @Override
-    public void changeStatus(String uuid, RequestSetNewStatusDto setNewStatusDto) {
-        Optional<Stage> optionalStage = stageRepository.findByUuid(uuid);
-
-        if(optionalStage.isEmpty()){
-            throw new EntityNotFoundException("공연을 찾을 수 없습니다.");
-        }
-        Stage stage = optionalStage.get();
-        StageStatus newStatus = setNewStatusDto.getNewStatus();
-
-        stage.setStageStatus(newStatus);
-        stageRepository.save(stage);
-    }
-
-    @Override
+    @Transactional
     public void deleteStage(String uuid) {
         Optional<Stage> optionalStage = stageRepository.findByUuid(uuid);
 
